--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,12 +14,18 @@ body {
 .box-titles {
 	display: flex;
 	padding: 3em 0 2.5em;
+	@media (max-width: 768px) {
+		padding: 2em 0 2em;
+	}
 	h1 {
 		position: relative;
 		margin: 0;
 		font-size: 30px;
 		font-weight: 700;
 		color: #333333;
+		@media (max-width: 480px) {
+			font-size: 25px;
+		}
 		&:after {
 			content: "";
 			position: absolute;
@@ -73,6 +79,12 @@ body {
 			background-color: white;
 			border-radius: 8px;
 			transition: .3s;
+			@media (max-width: 1199px) {
+				padding: 1em .5em 2.5em;
+			}
+			@media (max-width: 480px) {
+				height: 280px;
+			}
 			&__offer {
 				position: absolute;
 				width: 55px;
@@ -85,12 +97,19 @@ body {
 				top: 5px;
 				right: 5px;
 				z-index: 1;
+				@media (max-width: 480px) {
+					width: 45px;
+					height: 45px;
+				}
 				span {
 					display: block;
 					font-size: 20px;
 					color: white;
 					text-align: center;
 					font-weight: 700;
+					@media (max-width: 480px) {
+						font-size: 18px;
+					}
 				}
 			}
 			&__img {
@@ -100,19 +119,24 @@ body {
 				width: 100%;
 				height: 170px;
 				overflow: hidden;
+				@media (max-width: 480px) {
+					height: 120px;
+				}
 				img {
 					width: 100%;
 					transition: .3s;
 				}
 			}
 			&__title {
-				height: 32px;
 				margin-top: .75em;
 				font-size: 13px;
 				color: $blue;
 				text-transform: uppercase;
 				font-weight: 700;
 				line-height: 16px;
+				@media (max-width: 480px) {
+					font-size: 12px;
+				}
 			}
 			&__sku {
 				font-size: 11px;
@@ -123,6 +147,9 @@ body {
 				font-size: 30px;
 				color: $red;
 				font-weight: 900;
+				@media (max-width: 480px) {
+					font-size: 25px;
+				}
 			}
 			&__price-before {
 				margin: -5px 0 0;
@@ -148,6 +175,10 @@ body {
 				text-decoration: none;
 				transition: .3s;
 				@include center-x;
+				@media (max-width: 480px) {
+					width: 130px;
+					font-size: 12px;
+				}
 				&:hover {
 					background-color: $orange;
 					box-shadow: 0 3px 15px rgba(255,161,80,.5);
@@ -213,11 +244,25 @@ body {
 }
 
 .slide-home {
+	@media (max-width: 768px) {
+		margin-bottom: 15px !important;
+	}
 	&__img {
 		a {
 			display: block;
 			img {
 				width: 100%;
+				&.img-lg {
+					@media (max-width: 768px) {
+						display: none;
+					}
+				}
+				&.img-xs {
+					display: none;
+					@media (max-width: 768px) {
+						display: block;
+					}
+				}
 			}
 		}
 	}
@@ -242,6 +287,10 @@ body {
 			.banner-slide-row {
 				display: flex;
 				margin: 0 -15px;
+				@media (max-width: 768px) {
+					flex-wrap: wrap;
+					margin: 0 -5px;
+				} 
 				&__large, &__small {
 					a {
 						position: relative;
@@ -272,10 +321,18 @@ body {
 				&__large {
 					width: 50%;
 					padding: 0 15px;
+					@media (max-width: 768px) {
+						width: 100%;
+						padding: 5px;
+					}
 				}
 				&__small {
 					width: 25%;
 					padding: 0 15px;
+					@media (max-width: 768px) {
+						width: 50%;
+						padding: 5px;
+					}
 				}
 			}
 		}
@@ -287,8 +344,14 @@ body {
 		display: flex;
 		flex-wrap: wrap;
 		margin: 0 -15px;
+		@media (max-width: 768px) {
+			margin: 0 -5px;
+		}
 		&__full, &__half {
 			padding: 0 15px;
+			@media (max-width: 768px) {
+				padding: 5px;
+			}
 			a {
 				position: relative;
 				display: block;
@@ -307,6 +370,17 @@ body {
 				}
 				img {
 					width: 100%;
+					&.img-lg {
+						@media (max-width: 768px) {
+							display: none;
+						}
+					}
+					&.img-xs {
+						display: none;
+						@media (max-width: 768px) {
+							display: block;
+						}
+					}
 				}
 				&:hover {
 					&:after {
@@ -318,6 +392,9 @@ body {
 		&__full {
 			width: 100%;
 			padding-bottom: 30px;
+			@media (max-width: 768px) {
+				padding-bottom: 5px;
+			}
 		}
 		&__half {
 			width: 50%;
@@ -330,14 +407,11 @@ body {
 		display: flex;
 		flex-wrap: wrap;
 		margin: 0 -15px;
+		@media (max-width: 992px) {
+			margin: 0 -5px;
+		}
 		&__col {
 			padding: 0 15px 2.5em;
-			&--l {
-				width: 50%;
-			}
-			&--s {
-				width: 25%;
-			}
 			.box-category-h {
 				position: relative;
 				display: block;
@@ -347,6 +421,7 @@ body {
 					width: 100%;
 					height: 100%;
 					background-color: rgba(255,161,80,.5);
+					border-radius: 8px;
 					top: 0;
 					left: 0;
 					opacity: 0;
@@ -390,6 +465,59 @@ body {
 						&__title {
 							background-color: $blue;
 							color: white;
+						}
+					}
+				}
+			}
+			&--l {
+				width: 50%;
+				@media (max-width: 992px) {
+					width: 33.3333%;
+					padding: 0 5px 2.5em;
+				}
+				@media (max-width: 768px) {
+					width: 50%;
+				}
+				@media (max-width: 480px) {
+					width: 100%;
+				}
+				.box-category-h {
+					&__img {
+						@media (max-width: 992px) {
+							display: flex;
+							align-items: center;
+							justify-content: center;
+						}
+						@media (max-width: 768px) {
+							height: 230px;
+						}
+						img {
+							@media (max-width: 992px) {
+								width: 492px;
+							}
+						}
+					}
+				} 
+			}
+			&--s {
+				width: 25%;
+				@media (max-width: 992px) {
+					width: 33.3333%;
+					padding: 0 5px 2.5em;
+				}
+				@media (max-width: 768px) {
+					width: 50%;
+				}
+				@media (max-width: 480px) {
+					width: 100%;
+				}
+				.box-category-h {
+					&__img {
+						@media (max-width: 768px) {
+							height: 230px;
+							display: flex;
+							align-items: center;
+							justify-content: center;
 						}
 					}
 				}
@@ -450,19 +578,35 @@ body {
 
 .cont-info {
 	padding: 0 0 3em;
+	@media (max-width: 480px) {
+		padding: 0 0 2em;
+	}
 	.info-row {
 		display: flex;
 		flex-wrap: wrap;
 		padding: 2em 0 0;
+		@media (max-width: 480px) {
+			padding: 0;
+		}
 		&__col {
 			width: 25%;
 			padding: 1.5em 0;
 			border-right: 1px solid #C3C3C3;
+			@media (max-width: 992px) {
+				width: 50%;
+				border: none;
+			}
 			&:first-child {
 				border-left: 1px solid #C3C3C3;
+				@media (max-width: 992px) {
+					border: none;
+				}
 			}
 			.box-info {
 				padding: 0 2.5em;
+				@media (max-width: 480px) {
+					padding: 0 1em;
+				}
 				img {
 					display: block;
 					margin: 0 auto;
@@ -478,6 +622,9 @@ body {
 						font-size: 16px;
 						font-weight: 900;
 						text-transform: uppercase;
+						@media (max-width: 480px) {
+							font-size: 14px;
+						}
 					}
 					&__txt {
 						display: flex;
@@ -540,6 +687,9 @@ body {
 			border: 1px solid $orange;
 			border-radius: 5px;
 			outline: none;
+			@media (max-width: 480px) {
+				width: 310px;
+			}
 			@include placeholder {
 				color: #999999;
 			}
